[package]
name = "pwasm-abi"
version = "0.1.0"
authors = ["NikVolf <nikvolf@gmail.com>"]

[profile.release]
panic = "abort"

[dependencies]
tiny-keccak = { version = "1", default-features = false }
rustc-hex = { version = "1.0", optional = true }

[dependencies.bigint]
version = "4"
default-features = false

[dependencies.parity-hash]
version = "1"
default-features = false

[dependencies.byteorder]
version = "1"
default-features = false

[features]
default = []
std = ["rustc-hex", "bigint/std"]
