[package]
name = "pwasm-abi"
version = "0.1.4"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/pwasm-abi"
homepage = "https://github.com/paritytech/pwasm-abi"
documentation = "https://paritytech.github.io/pwasm-abi/pwasm_abi/"
description = "Rust WebAssembly Contracts Abi"
keywords = ["wasm", "parity", "webassembly", "blockchain", "abi"]
categories = ["no-std", "embedded"]
exclude = [ "tests/*", "derive/*" ]

[profile.release]
panic = "abort"

[dependencies]
tiny-keccak = { version = "1.4.2", default-features = false }
rustc-hex = { version = "1.0.0", optional = true }

[dependencies.bigint]
version = "4.4.0"
default-features = false

[dependencies.parity-hash]
version = "1.2.0"
default-features = false

[dependencies.byteorder]
version = "1.2.3"
default-features = false

[features]
default = []
std = ["rustc-hex", "bigint/std"]
