[package]
name = "pwasm-abi-derive"
version = "0.1.3"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/pwasm-abi"
homepage = "https://github.com/paritytech/pwasm-abi"
documentation = "https://paritytech.github.io/pwasm-abi/pwasm_abi/"
description = "Rust WebAssembly Contracts Abi (derive macros)"
keywords = ["wasm", "parity", "webassembly", "blockchain", "abi"]
categories = ["no-std", "embedded"]

[profile.release]
panic = "abort"

[dependencies]
pwasm-abi = { path = "..", version = "0.1" }
quote = "0.3"
syn = { version = "0.11", features = ["full"] }
tiny-keccak = { version = "1", default-features = false }
byteorder = { version = "1", default-features = false }
parity-hash = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde-json-core = {git = "https://github.com/Pzixel/serde-json-core.git", branch = "feature/alloc", features = ["alloc"]}
serde_derive = { version = "1", default-features = false }

[lib]
name = "pwasm_abi_derive"
proc-macro = true
