[package]
name = "pwasm-abi-derive"
version = "0.2.3"
authors = ["NikVolf <nikvolf@gmail.com>", "Alexey Frolov <alexey@parity.io>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/pwasm-abi"
homepage = "https://github.com/paritytech/pwasm-abi"
documentation = "https://paritytech.github.io/pwasm-abi/pwasm_abi/"
description = "Rust WebAssembly Contracts Abi (derive macros)"
keywords = ["wasm", "parity", "webassembly", "blockchain", "abi"]
categories = ["no-std", "embedded"]

[profile.release]
panic = "abort"

[dependencies]
quote = "0.6.8"
syn = { version = "0.15.12", features = ["full", "extra-traits"] }
proc-macro2 = "0.4"

tiny-keccak = { version = "1.4.2", default-features = false }
byteorder = { version = "1.2.3", default-features = false }
fixed-hash = { version = "0.3.0", default-features = false }

serde = "1.0.70"
serde_json = "1.0.24"
serde_derive = "1.0.70"

[lib]
name = "pwasm_abi_derive"
proc-macro = true
