[package]
name = "pwasm-abi-tests"
version = "0.0.0"
authors = ["NikVolf <nikvolf@gmail.com>"]

[dependencies]
pwasm-std = "0.13"
pwasm-abi = { path = "..", default-features = false }
pwasm-abi-derive = { path = "../derive" }

[dependencies.pwasm-test]
git = "https://github.com/Robbepop/pwasm-test"
branch = "update-to-pwasm-std-0_11"
optional = true

[dependencies.pwasm-ethereum]
git = "https://github.com/Robbepop/pwasm-ethereum"
branch = "update-to-pwasm-std-0_11"

[features]
default = []
test = ["pwasm-test", "pwasm-std/std", "pwasm-ethereum/std"]
